# opencv-cpp

advanced/week1-cpp/: readme.md
advanced/week1-cpp/cpp/: CMakeLists.txt
advanced/week2-cpp/: Bug Eyes.md  Delaunay.md  FaceAveraing.md  FaceMorphing.md  headpose.md  readme.md
advanced/week2-cpp/cpp/: alphaBlend.cpp  delaunay.cpp  delaunayAnimation.cpp  warpTriangle.cpp
advanced/week2-cpp/notebooks-cpp/: Delaunay-Triangulation.ipynb  faceBlendCommon.hpp
advanced/week2-cpp/notebooks-cpp/.ipynb_checkpoints/: Bug-Eyes-checkpoint.ipynb
advanced/week3-cpp/: readme.md
advanced/week3-cpp/cpp/: CMakeLists.txt  aging.cpp  beardImage.cpp  beardVideo.cpp  faceswapImage.cpp  faceswapVideo.cpp  fatifyImage.cpp  fatifyVideo.cpp  happifyImage.cpp  happifyVideo.cpp  seamlessCloning.cpp
advanced/week3-cpp/data/images/: obama.jpg.txt  wrinkle2.jpg.txt
advanced/week3-cpp/notebooks-cpp/: Aging-Filter.ipynb  Beard-Filter.ipynb  Faceswap.ipynb  Fatify-Filter.ipynb  Happify-Filter.ipynb  Seamless_Cloning.ipynb  includeLibraries.h
advanced/week4-cpp/: readme.md
advanced/week4-cpp/cpp/: CMakeLists.txt  eigenFace.cpp  faceBlendCommon.hpp  label_name_openface.txt  labels_map.txt  trainOpenCVFaceRec.cpp
tutorial/: readme.md
week2-cpp/: readme.md
week2-cpp/cpp/: CMakeLists.txt  webcamHeadPose.cpp  webcamHeadPoseWithStabilization.cpp
week2-cpp/data/images/presidents/: george-w-bush.txt
week2-cpp/notebooks-cpp/: Alpha-Blending.ipynb  Face-Averaging.ipynb  Face-Morphing.ipynb  Geometric_Transform.ipynb  Headpose-Estimation.ipynb  Warping-a-triangle.ipynb
(+6 files in other folders)
